syntax="proto3";
package user;

option go_package="./internal/interfaces/input/grpc/user";


message User {
    string id = 1;
    string name = 2;
    string address = 3;
    string city = 4;
    string state = 5;
    string country = 6;
    string pincode = 7;
    string phone_number = 8;
    string marital_status = 9;
    float height = 10;
}

message FindUserByIdInput{
    string id=1;
}

message FindUserByIdResponse{
    User userDet=1;
}

message FindUsersListFromIDReq{
    repeated string id=1;
}

message FindUsersListFromIDResponse{
    repeated User userDet=1;
}

message Filter{
    string country=1;
    string marital_status=2;
}

message FindUserByFilterResp{
    repeated User userDet=1;
}

service UserService{
    rpc FindUserById(FindUserByIdInput) returns (FindUserByIdResponse);
    rpc FindUsersListFromID(FindUsersListFromIDReq) returns (FindUsersListFromIDResponse);
    rpc FindUserByFilter(Filter) returns(FindUserByFilterResp);
}